--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,8 @@ services:
     ports:
       - "8000:8000"
     environment:
+      - DATABASE_URL=postgresql://postgres:postgres@host.docker.internal:5432/postgres
       - PORT=8000
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: unless-stopped
