feat: update dependencies and refactor project structure
- Added Dockerfile for production build using cargo-chef and distroless.
- Created Dockerfile.dev for development with faster builds.
- Updated Makefile to include production build commands.
- Added docker-compose.prod.yml for production deployment.
- Modified docker-compose.yml for development with volume mounts.
- Removed old Dockerfile and added rustfmt configuration.
- Refactored main.rs to simplify the application and remove GraphQL implementation.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
       - "8000:8000"
     environment:
@@ -10,12 +10,4 @@ services:
       - PORT=8000
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    volumes:
-      - .:/app
-      - cargo-cache:/usr/local/cargo/registry
-      - target-cache:/app/target
     restart: unless-stopped
-
-volumes:
-  cargo-cache:
-  target-cache:
