--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,13 @@ serde_json = "1.0"
 dotenvy = "0.15"
 config = "0.14"
 
+[dev-dependencies]
+axum-macros = "0.5"
+hyper-util = { version = "0.1", features = ["tokio", "client", "http1", "http2"] }
+mime = "0.3"
+tower = { version = "0.5", features = ["util"] }
+http-body-util = "0.1"
+
 [profile.release]
 lto = true
 codegen-units = 1
