--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,10 @@ jobs:
           curl -fsSL https://raw.githubusercontent.com/koyeb/koyeb-cli/master/install.sh | sh
           echo "$HOME/.koyeb/bin" >> $GITHUB_PATH
 
-      - name: Login to Koyeb
-        run: koyeb login --token "${{ secrets.KOYEB_API_TOKEN }}"
+      - name: Configure Koyeb CLI
+        run: |
+          mkdir -p $HOME/.koyeb
+          echo "api_token: ${{ secrets.KOYEB_API_TOKEN }}" > $HOME/.koyeb/config.yaml
 
       - name: Deploy to Koyeb
         run: |
