--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,25 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/koko-pic-api:latest
 
       - name: Set up Koyeb CLI
         run: |
@@ -22,9 +39,6 @@ jobs:
           mkdir -p $HOME/.koyeb
           echo "api_token: ${{ secrets.KOYEB_API_TOKEN }}" > $HOME/.koyeb/config.yaml
 
-      - name: Deploy to Koyeb
+      - name: Redeploy to Koyeb
         run: |
-          koyeb deploy . unknown-damselfly/koko-pic-api \
-            --git github.com/${{ github.repository }} \
-            --git-branch ${{ github.ref_name }} \
-            --wait
+          koyeb service redeploy unknown-damselfly/koko-pic-api
