--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,10 +4,16 @@ on:
   push:
     branches:
       - dev
+      - main
+
+permissions:
+  contents: read
+  packages: write   # GHCR 用
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -15,25 +21,55 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
+      # -----------------------
+      # dev → Docker Hub
+      # -----------------------
+      - name: Login to Docker Hub (dev)
+        if: github.ref == 'refs/heads/dev'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push to Docker Hub (dev)
+        if: github.ref == 'refs/heads/dev'
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/koko-pic-api:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/koko-pic-api:dev
 
+      # -----------------------
+      # main → GHCR
+      # -----------------------
+      - name: Login to GitHub Container Registry (main)
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.TOKEN_GHCR }}
+
+      - name: Build and push to GHCR (main)
+        if: github.ref == 'refs/heads/main'
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/koko-pic-api:latest
+
+      # -----------------------
+      # Koyeb deploy (main only)
+      # -----------------------
       - name: Install and configure Koyeb CLI
+        if: github.ref == 'refs/heads/main'
         uses: koyeb-community/koyeb-actions@v2
         with:
           api_token: "${{ secrets.KOYEB_API_TOKEN }}"
 
       - name: Redeploy to Koyeb
+        if: github.ref == 'refs/heads/main'
         run: |
           koyeb service redeploy unknown-damselfly/koko-pic-api
