feat: add DATABASE_URL environment variable to Koyeb redeploy command

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -41,4 +41,4 @@ jobs:
 
       - name: Redeploy to Koyeb
         run: |
-          koyeb service redeploy unknown-damselfly/koko-pic-api
+          koyeb service redeploy unknown-damselfly/koko-pic-api --env DATABASE_URL=bar
