feat: update Koyeb redeploy command to include DATABASE_URL environment variable

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -41,4 +41,8 @@ jobs:
 
       - name: Redeploy to Koyeb
         run: |
-          koyeb service redeploy unknown-damselfly/koko-pic-api --env DATABASE_URL=bar
+          koyeb service update unknown-damselfly/koko-pic-api --env DATABASE_URL=bar
+
+      - name: Redeploy to Koyeb
+        run: |
+          koyeb service redeploy unknown-damselfly/koko-pic-api
