--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -13,6 +13,7 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 RUN rustup component add rustfmt clippy
+RUN cargo install sqlx-cli --no-default-features --features postgres
 
 EXPOSE 8000
 
