--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dotenvy = "0.15"
 config = "0.15.19"
+sha2 = "0.10"
+hex = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 axum-macros = "0.5"
@@ -21,6 +24,7 @@ hyper-util = { version = "0.1", features = ["tokio", "client", "http1", "http2"]
 mime = "0.3"
 tower = { version = "0.5", features = ["util"] }
 http-body-util = "0.1"
+tokio-test = "0.4"
 
 [profile.release]
 lto = true
