--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "8000:8000"
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/postgres
+      - TEST_DATABASE_URL=postgresql://postgres:postgres@postgres:5432/koko_pic_test
       - PORT=8000
     depends_on:
       - postgres
@@ -26,6 +27,7 @@ services:
       - POSTGRES_DB=postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./init/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     restart: unless-stopped
 
 volumes:
