--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ config = "0.15.19"
 sha2 = "0.10"
 hex = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
+jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
 
 [dev-dependencies]
 axum-macros = "0.5"
