--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ sha2 = "0.10"
 hex = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
 jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
+async-trait = "0.1"
 
 [dev-dependencies]
 axum-macros = "0.5"
@@ -26,6 +27,7 @@ mime = "0.3"
 tower = { version = "0.5", features = ["util"] }
 http-body-util = "0.1"
 tokio-test = "0.4"
+mockall = "0.13"
 
 [profile.release]
 lto = true
