--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ sha2 = "0.10"
 chrono = { version = "0.4", features = ["serde"] }
 jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
 async-trait = "0.1"
+validator = { version = "0.19", features = ["derive"] }
 
 [dev-dependencies]
 axum-macros = "0.5"
