--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ chrono = { version = "0.4", features = ["serde"] }
 jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
 async-trait = "0.1"
 validator = { version = "0.19", features = ["derive"] }
+regex = "1.0"
 
 [dev-dependencies]
 axum-macros = "0.5"
