--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
 async-trait = "0.1"
 validator = { version = "0.19", features = ["derive"] }
 regex = "1.0"
+uuid = { version = "1.0", features = ["v4"] }
+lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "pool", "builder"] }
 
 [dev-dependencies]
 axum-macros = "0.5"
