--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,6 +10,12 @@ services:
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@host.docker.internal:5432/postgres
       - PORT=8000
+      # 本番環境用メール設定 (Resend SMTP)
+      - SMTP_HOST=smtp.resend.com
+      - SMTP_PORT=587
+      - SMTP_USERNAME=resend
+      - SMTP_PASSWORD=${RESEND_API_KEY}
+      - SMTP_FROM_EMAIL=onboarding@resend.dev
     extra_hosts:
       - "host.docker.internal:host-gateway"
     restart: unless-stopped
