--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -63,8 +63,8 @@ jobs:
 
       - name: Run migrations on Neon branch
         run: |
-          DATABASE_URL=${{ steps.create_neon_branch.outputs.db_url }} \
-          sqlx migrate run
+          DATABASE_URL=${{ steps.create_neon_branch.outputs.db_url }} sqlx migrate run
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
