feat: simplify migration step by removing echo and directly using DATABASE_URL
(cherry picked from commit 8ed088eceb341c2139669d86f7297707a2741796)

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -21,9 +21,10 @@ jobs:
         run: cargo install sqlx-cli --force
 
       - name: Run migrations on Neon branch
+        env:
+          DATABASE_URL: ${{ secrets.NEON_DATABASE_URL }}
         run: |
-          echo "${{ secrets.NEON_DATABASE_URL }}"
-          DATABASE_URL=${{ secrets.NEON_DATABASE_URL }} sqlx migrate run
+          sqlx migrate run
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
