feat: update sqlx-cli installation to use specific features and add DATABASE_URL build argument
(cherry picked from commit f3c9583fc5ca96999d6ddf6934276203bd45403a)

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install sqlx-cli
-        run: cargo install sqlx-cli --force
+        run: cargo install sqlx-cli --no-default-features --features postgres,native-tls --force
 
       - name: Run migrations on Neon branch
         run: |
