--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install sqlx-cli
-        run: cargo install sqlx-cli --force
+        run: cargo install sqlx-cli --no-default-features --features postgres,native-tls --force
 
       - name: Run migrations on Neon branch
         env:
@@ -43,6 +43,8 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/koko-pic-api:latest
+          build-args: |
+            DATABASE_URL=${{ secrets.NEON_DATABASE_URL }}
 
       - name: Trigger Render deploy hook
         run: |
