--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -20,21 +20,25 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GitHub Container Registry
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.TOKEN_GHCR }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push to GHCR
+      - name: Build and push to Docker Hub
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/koko-pic-api:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/koko-pic-api:production
 
-      - name: Trigger Render deploy hook
+      - name: Install and configure Koyeb CLI
+        uses: koyeb-community/koyeb-actions@v2
+        with:
+          api_token: "${{ secrets.KOYEB_PROD_API_TOKEN }}"
+
+      - name: Redeploy to Koyeb
         run: |
-          curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK }}
+          koyeb service redeploy southern-kial/koko-pic-api
