--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ validator = { version = "0.19", features = ["derive"] }
 regex = "1.0"
 uuid = { version = "1.0", features = ["v4"] }
 lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "pool", "builder"] }
+tower-http = { version = "0.6", features = ["cors"] }
 
 [dev-dependencies]
 axum-macros = "0.5"
