feat: enhance user service with verification email functionality and refactor database executor usage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - SMTP_USERNAME=test
       - SMTP_PASSWORD=test
       - SMTP_FROM_EMAIL=koko-pic@example.com
+      - FRONTEND_URL=http://localhost:1420
     depends_on:
       - postgres
       - mailhog
