feat: integrate S3 storage for picture uploads
- Added aws-sdk-s3 and aws-config dependencies to Cargo.toml.
- Updated docker-compose.yml with new S3 credentials and endpoint.
- Refactored create_picture_handler to handle file uploads and metadata.
- Implemented upload_and_create_picture method in PictureService to upload files to S3.
- Created S3Storage struct for managing S3 interactions.
- Updated SharedAppState to include S3Storage.
- Modified main.rs to initialize S3Storage and pass it to SharedAppState.
- Enhanced test support to create a test S3 storage instance.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,11 +22,11 @@ services:
       # S3 (RustFS)
       # ======================
       - S3_ENDPOINT=http://rustfs:9000
-      - S3_ACCESS_KEY=rustfs
-      - S3_SECRET_KEY=rustfssecret
+      - S3_PUBLIC_ENDPOINT=http://127.0.0.1:9000
+      - S3_ACCESS_KEY=kFPuRNwomSyA8Zlx0qHn
+      - S3_SECRET_KEY=MdpgKtYTPbQSBND0VhGH28WaIy5Rx3rifOZqU9ju
       - S3_REGION=us-east-1
-      - S3_BUCKET=local-bucket
-      - S3_FORCE_PATH_STYLE=true
+      - S3_BUCKET=dev
 
     depends_on:
       - postgres
