--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ regex = "1.0"
 uuid = { version = "1.0", features = ["v4"] }
 lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "pool", "builder"] }
 tower-http = { version = "0.6", features = ["cors"] }
+aws-config = "1.5"
+aws-sdk-s3 = "1.120.0"
 
 [dev-dependencies]
 axum-macros = "0.5"
