--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,12 @@ lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", 
 tower-http = { version = "0.6", features = ["cors"] }
 aws-config = "1.5"
 aws-sdk-s3 = "1.120.0"
+aws-smithy-runtime = { version = "1.7", features = ["client"] }
 
 [dev-dependencies]
 axum-macros = "0.5"
 tower = { version = "0.5", features = ["util"] }
+serial_test = "3.2"
 
 [profile.release]
 lto = true
