--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -10,6 +10,7 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y \
     pkg-config \
     libssl-dev \
+    ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
 RUN rustup component add rustfmt clippy
